# differentiable-rasterizer

./: README.md
labhelper/: Model.cpp  Model.h  labhelper.cpp  labhelper.h  perf.cpp
project/: CMakeLists.txt  fullscreenquad.frag  main.cpp  perturb.comp  pixel_error.comp
